kyverno/authorization/host-namespaces/disallow-host-ipc.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ipc
  annotations:
    policies.kyverno.io/description: Sharing the host's IPC namespace allows
      the container process to communicate with processes on the host. To avoid pod container from
      having visibility to host process space, validate that 'hostIPC' is set to 'false'.
spec:
  background: true
  validationFailureAction: enforce
  rules:
    - name: validate-hostIPC-scc
      match:
        resources:
          kinds:
            - SecurityContextConstraints
      exclude:
        resources:
          name: hostaccess
        resources:
          name: privileged
      validate:
        message: "Creating SCC that allows host IPC namespaces in custom created scc is forbidden"
        pattern:
          =(allowHostIPC): "false"
    - name: validate-hostIPC-pod
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - "openshift-*"
            - "openshift*"
            - "kube-*"
            - "kube*"
      validate:
        message: "Use of host IPC namespaces is not allowed in pods"
        pattern:
          spec:
            =(hostIPC): "false"
